--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TechCore-GH-Action",
+  "name": "techcore-nightwing-action",
   "version": "1.0.0",
   "main": "src/index.js",
   "repository": "https://github.com/TechCore-Rex/nightwing-action.git",
